<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="CS_ERR_for_system_error">System error. Please log in again.</string>
    <string name="CS_ERR_for_unable_connect_server">Unable to access server. Please try again.</string>
    <string name="CS_ERR_for_unable_get_data">Unable to obtain data. Please try again later.</string>
    <string name="CS_download_failed_notes">Download failed. Retry?</string>
    <string name="CS_download_no_space">Insufficient space in phone. Download failed.</string>
    <string name="CS_downloading">Downloading: %d%%</string>
    <string name="CS_downloading_new">%s%%</string>
    <string name="CS_downloading_now_new">Downloading…</string>
    <string name="CS_install">Install</string>
    <string name="CS_install_hwid">Install Huawei ID</string>
    <string name="CS_menu_settings">Settings</string>
    <string name="CS_network_connect_error">No Internet connection. Please check your network settings.</string>
    <string name="CS_no_network_content">The network server is unavailable. Please check your network connection.</string>
    <string name="CS_no_send_sms_permission">This app does not have permission to send messages.</string>
    <string name="CS_permission_setting_tip">%1$s requires access to %2$s, or some services will been not available.\nGo to %3$s &gt; Permission manager and enable the corresponding permission.</string>
    <string name="CS_prompt_dialog_title">Information</string>
    <string name="CS_read_phone_state_permission">Phone</string>
    <string name="CS_retry">Retry</string>
    <string name="CS_server_unavailable_title">Connection failed</string>
    <string name="CS_sms_permission">SMS</string>
    <string name="CS_terminate">Abort</string>
    <string name="CS_terminate_notes">If you abort the download, you will not be able to use Huawei ID. Abort?</string>
    <string name="CS_update">Update</string>
    <string name="CS_update_hwid">Update Huawei ID</string>
    <string name="CS_update_notes">You have not yet installed the complete Huawei ID feature. You can only use it once it has been installed. It only needs to be installed once. Install now?</string>
    <string name="CS_update_old_hwid_notes">A new version of Huawei ID is available. Update now?</string>
    <string name="CS_update_stop">Stop downloading?</string>
    <string name="CS_waiting_progress_message">Please wait.</string>
    <string name="CS_warm_prompt">Note</string>
    <string name="app_name">CtripOAuth</string>
    <string name="aufail">Failed</string>
    <string name="authok">Success</string>
    <string name="blink_detection">BLINK</string>
    <string name="default_btn_network_setting">Network settings</string>
    <string name="default_err_conn_server_failed">Unable to access server, please try again.</string>
    <string name="default_err_network_failed_retry">No Internet connection, touch to retry</string>
    <string name="default_err_webview_req_failed">Server error, please try again.</string>
    <string name="default_hwid_login">Huawei ID login</string>
    <string name="facelost">Face Lost</string>
    <string name="idscan_app_name">去哪儿旅行</string>
    <string name="idscan_camera_framework_bug">获取相机权限失败，请在设置中打开。</string>
    <string name="idscan_passport_scan">证件扫描</string>
    <string name="idscan_sure">确定</string>
    <string name="liveness_detection_failed">活体检测失败</string>
    <string name="liveness_detection_failed_action_blend">活体检测动作错误</string>
    <string name="liveness_detection_failed_not_video">活体检测连续性检测失败</string>
    <string name="liveness_detection_failed_timeout">活体检测超时失败</string>
    <string name="loading_confirm">OK,I Know</string>
    <string name="loading_text">使用说明：\n1、首先您需要输入姓名；\n2、之后您需要按照屏幕上的提示完成3个动作，以通过活体检测，同时软件会将您的人脸图像发送至服务器进行人脸验证；\n3、如果您没有通过活体检测或者人脸验证，则登陆失败，反之则登陆成功。</string>
    <string name="mouth_detection">MOUTH</string>
    <string name="netowrk_parse_failed">解析服务器数据失败</string>
    <string name="network_error">网络请求失败</string>
    <string name="novalidframe">没有合适的图像用于人脸识别</string>
    <string name="pos_detection">POS</string>
    <string name="ql_account">Huawei ID: </string>
    <string name="ql_aggreement_check">Agree </string>
    <string name="ql_and"> and </string>
    <string name="ql_btn_ok">OK</string>
    <string name="ql_cacel">Cancel</string>
    <string name="ql_check_aggree">I agree to the %1$s and %2$s</string>
    <string name="ql_check_aggree_new">Logging in means that you agree to the %1$s and %2$s. A text message will be sent from this phone to help complete your registration.</string>
    <string name="ql_check_no_sim">No SIM card. Please try another login method.</string>
    <string name="ql_dialog_title">Attention</string>
    <string name="ql_enter_game_btn_name">Enter app</string>
    <string name="ql_enter_game_btn_name_reset_password">Reset password and enter app</string>
    <string name="ql_enter_game_btn_name_resetting_password">Resetting password...</string>
    <string name="ql_enter_game_btn_name_set_password">Set password and enter app</string>
    <string name="ql_enter_game_btn_name_setting_password">Setting password...</string>
    <string name="ql_hwid_policy">Privacy Policy</string>
    <string name="ql_hwid_policy_new">Huawei Privacy Policy</string>
    <string name="ql_hwid_terms">Terms of Service</string>
    <string name="ql_hwid_terms_new">End User License Agreement</string>
    <string name="ql_loading">Logging in...</string>
    <string name="ql_network_abnormally">No Internet connection. Please check your network settings. Retry?</string>
    <string name="ql_network_not_available">No Internet connection. Please check your network settings.</string>
    <string name="ql_newuser_enter_without_setpassword_error">Password (6-32 characters)</string>
    <string name="ql_no_connection">No Internet connection</string>
    <string name="ql_password_length_not_enough_error">The password must contain at least 6 characters.</string>
    <string name="ql_password_length_over_error">The password can contain a maximum of 32 characters.</string>
    <string name="ql_password_length_wrong_char_input">Invalid password.</string>
    <string name="ql_please_check_aggree">You must agree to our Terms of Service and Privacy Policy before logging in.</string>
    <string name="ql_please_check_aggree_new">You must agree to our End User License Agreement and Huawei Privacy Policy before logging in.</string>
    <string name="ql_policy_loading">Loading...</string>
    <string name="ql_privacy_policy">Privacy Policy</string>
    <string name="ql_privacy_policy_new">Huawei Privacy Policy</string>
    <string name="ql_pwd_not_same_as_account">Your password cannot contain your account name.</string>
    <string name="ql_quick_login">Log in</string>
    <string name="ql_quick_login_hint">A message will be sent to you to verify your identity. Internet access is required to log in to Huawei ID.</string>
    <string name="ql_reset_password_fail">Failed to reset the password. Please try again.</string>
    <string name="ql_reset_password_hint_text">If you forget your password, you can reset it here.</string>
    <string name="ql_retry">Retry</string>
    <string name="ql_retry_hint">The message has not been delivered yet. Please try again or use another login method.</string>
    <string name="ql_service_aggreement">Terms of Service</string>
    <string name="ql_service_aggreement_new">End User License Agreement</string>
    <string name="ql_set_password_fail">Failed to set the password. Please try again.</string>
    <string name="ql_set_password_hint">Password (6-32 characters)</string>
    <string name="ql_set_password_title">Successfully registered.</string>
    <string name="ql_set_password_title_registed">Phone number registered</string>
    <string name="ql_switch_login">Use another Huawei ID</string>
    <string name="ql_system_abnormally">System error. Retry?</string>
    <string name="ql_title">Log in with Huawei ID</string>
    <string name="ql_validate_certificate">Verification of the security certificate failed. Make sure you have a working Internet connection and your system time is set correctly. Retry?</string>
    <string name="ql_web_loading">Loading...</string>
    <string name="spider_3dtouch_flight">预订机票</string>
    <string name="spider_3dtouch_hotel">预订酒店</string>
    <string name="spider_3dtouch_order">我的订单</string>
    <string name="spider_3dtouch_search">搜索</string>
    <string name="spider_app_name">去哪儿旅行</string>
    <string name="steps">活体检测:</string>
    <string name="timeout">超时</string>
    <string name="tipblink">Do blink with your eyes.</string>
    <string name="tippose">Rotate your pose vertically.</string>
    <string name="tipsmouth">Open your mouth and close.</string>
    <string name="verify_error">验证失败</string>
    <string name="verify_success">验证成功</string>
    <string name="xh_add_game_acct_fail">创建子账号失败请重试</string>
    <string name="xh_create_sub">创建子账号</string>
    <string name="xh_creating_user">正在创建子账号</string>
    <string name="xh_day_before">天前</string>
    <string name="xh_default_user">默认账号</string>
    <string name="xh_edit_user">编辑子账号</string>
    <string name="xh_game_acct_fail">子账号登陆失败请重试</string>
    <string name="xh_hour_before">小时前</string>
    <string name="xh_is_default_user">默认账号不允许修改</string>
    <string name="xh_is_loading">加载中...</string>
    <string name="xh_login_success">登录成功</string>
    <string name="xh_login_time_default">从未使用</string>
    <string name="xh_logining">正在登录华为帐号</string>
    <string name="xh_minute_before">分钟前</string>
    <string name="xh_modify_sub">修改子账号</string>
    <string name="xh_modifying_user">正在修改子账号</string>
    <string name="xh_month_before">个月前</string>
    <string name="xh_name_null_error">子账号名称不允许为空</string>
    <string name="xh_ok">确定</string>
    <string name="xh_over_ten_user">创建失败，您的子账号数量已达到上限</string>
    <string name="xh_same_user">该子账号已经存在</string>
    <string name="xh_second_before">1分钟内</string>
    <string name="xh_select_subaccount_login">请选择一个账号登录</string>
    <string name="xh_server_cer_error">证书验证不通过，请检查手机时间设置</string>
    <string name="xh_sub_account_limit">小号数目已达到上限</string>
    <string name="xh_switch">切换</string>
    <string name="xh_switch_user">切换账号</string>
    <string name="xh_update_game_acct_fail">修改子账号失败请重试</string>
    <string name="xh_use_old_game_sub">使用已有游戏帐号登录</string>
    <string name="xh_user_create">子账号</string>
    <string name="xh_year_before">年前</string>
</resources>
