<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:id="@+id/top_view" android:background="@color/default_black_100_percent" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/close_imageview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:src="@drawable/default_cancel" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:layout_marginStart="8dp" android:layout_alignParentStart="true" />
            <TextView android:textSize="@dimen/default_textview_size_14sp" android:textColor="#ffffff" android:ellipsize="end" android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/title_text" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001" android:text="@string/default_hwid_login" android:singleLine="true" android:layout_alignParentLeft="true" android:layout_centerInParent="true" />
        </RelativeLayout>
    </LinearLayout>
    <ProgressBar android:id="@+id/area_webview_progress_bar" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x201" android:max="100" android:progress="0" android:progressDrawable="@drawable/default_progress_horizontal" android:layout_below="@+id/top_view" style="?unknown_attr_ref: 1010078" />
    <WebView android:id="@+id/activity_area_webview" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/area_webview_progress_bar" />
    <Button android:textSize="@dimen/default_textview_size_14sp" android:id="@+id/default_err_btn_network_setting" android:visibility="gone" android:layout_width="match_parent" android:layout_height="UNKNOWN_DATA_0x3001" android:layout_marginLeft="15dp" android:layout_marginRight="15dp" android:layout_marginBottom="28dp" android:text="@string/default_btn_network_setting" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:layout_marginStart="15dp" android:layout_marginEnd="15dp" />
    <RelativeLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/default_requset_err_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/default_err_btn_network_setting" android:layout_below="@+id/area_webview_progress_bar">
        <ImageView android:id="@+id/default_err_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
        <TextView android:textSize="11sp" android:textColor="@color/ql_black_50_percent" android:id="@+id/default_err_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:text="@string/default_err_conn_server_failed" android:layout_below="@+id/default_err_image" android:layout_centerInParent="true" />
    </RelativeLayout>
    <RelativeLayout android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/default_network_failed_layout" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_above="@+id/default_err_btn_network_setting" android:layout_below="@+id/area_webview_progress_bar">
        <ImageView android:id="@+id/default_err_network_failed_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true" />
        <TextView android:textSize="11sp" android:textColor="@color/ql_black_50_percent" android:id="@+id/default_err_network_failed_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:text="@string/default_err_network_failed_retry" android:layout_below="@+id/default_err_network_failed_image" android:layout_centerInParent="true" />
    </RelativeLayout>
</RelativeLayout>
